--- a/math.html
+++ b/math.html
@@ -131,7 +131,7 @@ function outputMath() {
 		[280,   'log', [n], n, -2.0955709236097197, true, "log"],
 		[281,   'log', [Math.PI], "Math.PI", 1.1447298858494002],
 
-		[300, 'log1p', [n], n, 0.11600367575630613, true, "logplp"],
+		[300, 'log1p', [n], n, 0.11600367575630613, true, "log1p"],
 		[301, 'log1p', [Math.PI], "Math.PI", 1.4210804127942926],
 
 		[320, 'log10', [n], n, -0.9100948885606021, true, "log10"],
