--- a/math.html
+++ b/math.html
@@ -192,15 +192,15 @@ var fns = [
 	[420,  'tanh', [n], n, 0.12238344189440875],
 	[421,  'tanh', [Math.PI], "Math.PI", 0.99627207622075],
 
-	[440,   'pow', [n,-100], n+", -100", 1.0220893335845176e+91],
-	[441,   'pow', [Math.PI,-100], "Math.PI", 1.9275814160560185e-50],
-	[442,   'pow', [Math.E,-100], "Math.E", 3.720075976020851e-44],
-	[443,   'pow', [Math.LN2,-100], "Math.LN2", 8269017203802410],
-	[444,   'pow', [Math.LN10,-100], "Math.LN10", 6.003867926738811e-37],
-	[445,   'pow', [Math.LOG2E,-100], "Math.LOG2E", 1.2093335584550061e-16],
-	[446,   'pow', [Math.LOG10E,-100], "Math.LOG10E", 1.665592934758592e+36],
-	[447,   'pow', [Math.SQRT1_2,-100], "Math.SQRT1_2", 1125899906842611.5],
-	[448,   'pow', [Math.SQRT2,-100], "Math.SQRT2", 8.881784197001154e-16]
+	[440,   'pow', [n,-100], n+",-100", 1.0220893335845176e+91],
+	[441,   'pow', [Math.PI,-100], "Math.PI,-100", 1.9275814160560185e-50],
+	[442,   'pow', [Math.E,-100], "Math.E,-100", 3.720075976020851e-44],
+	[443,   'pow', [Math.LN2,-100], "Math.LN2,-100", 8269017203802410],
+	[444,   'pow', [Math.LN10,-100], "Math.LN10,-100", 6.003867926738811e-37],
+	[445,   'pow', [Math.LOG2E,-100], "Math.LOG2E,-100", 1.2093335584550061e-16],
+	[446,   'pow', [Math.LOG10E,-100], "Math.LOG10E,-100", 1.665592934758592e+36],
+	[447,   'pow', [Math.SQRT1_2,-100], "Math.SQRT1_2,-100", 1125899906842611.5],
+	[448,   'pow', [Math.SQRT2,-100], "Math.SQRT2,-100", 8.881784197001154e-16]
 ]
 
 
