--- a/math.html
+++ b/math.html
@@ -127,6 +127,8 @@ var fns = [
 
 	[200,  'cosh', [1], "1", 1.5430806348152437, 1.5430806348152437],
 	[201,  'cosh', [Math.PI], "Math.PI", 11.591953275521519, 11.591953275521519],
+	[202,  'cosh', [492*Math.LOG2E], '492*Math.LOG2E', 9.199870313877774e+307],
+	[203,  'cosh', [502*Math.SQRT2], '502*Math.SQRT2', 1.046919966902314e+308],
 
 	[220, 'expm1', [1], "1", 1.718281828459045],
 	[221, 'expm1', [Math.PI], "Math.PI", 22.140692632779267],
@@ -134,48 +136,55 @@ var fns = [
 	[240,   'exp', [n], n, 1.1308844209474893],
 	[241,   'exp', [Math.PI], "Math.PI", 23.140692632779267],
 
-	[260, 'hypot', [1,2,3,4,5,6], "1,2,3,4,5,6", 9.539392014169456],
-	[261, 'hypot', [bigN, bigN], "bigN, bigN", 8.288489826731114e+38],
-	[262, 'hypot', [2*Math.E,-100], '2*Math.E,-100', 100.14767208675258],
-	[263, 'hypot', [6*Math.PI,-100], '6*Math.PI,-100', 101.7610227859332],
-	[264, 'hypot', [2*Math.LN2,-100], '2*Math.LN2,-100', 100.00960859865252],
-	[265, 'hypot', [Math.LOG2E,-100], 'Math.LOG2E,-100', 100.01040630344927],
-	[266, 'hypot', [Math.SQRT2,-100], 'Math.SQRT2,-100', 100.00999950005],
-	[267, 'hypot', [Math.SQRT1_2,-100], 'Math.SQRT1_2,-100', 100.00249996875078],
-	[268, 'hypot', [2*Math.LOG10E,-100], '2*Math.LOG10E,-100', 100.00377216279418],
+	[260, 'hypot', [1,2,3,4,5,6], "1,2,3,4,5,6", 9.539392014169456, 9.539392014169458],
+	[261, 'hypot', [bigN, bigN], "bigN, bigN", 8.288489826731114e+38, 8.288489826731116e+38],
+	[262, 'hypot', [2*Math.E,-100], '2*Math.E,-100', 100.14767208675258, 100.14767208675259],
+	[263, 'hypot', [6*Math.PI,-100], '6*Math.PI,-100', 101.7610227859332, 101.76102278593319],
+	[264, 'hypot', [2*Math.LN2,-100], '2*Math.LN2,-100', 100.00960859865252, 100.0096085986525],
+	[265, 'hypot', [Math.LOG2E,-100], 'Math.LOG2E,-100', 100.01040630344927, 100.01040630344929],
+	[266, 'hypot', [Math.SQRT2,-100], 'Math.SQRT2,-100', 100.00999950005, 100.00999950004999],
+	[267, 'hypot', [Math.SQRT1_2,-100], 'Math.SQRT1_2,-100', 100.00249996875078, 100.0024999687508],
+	[268, 'hypot', [2*Math.LOG10E,-100], '2*Math.LOG10E,-100', 100.00377216279418, 100.00377216279416],
 
 	[280,   'log', [n], n, -2.0955709236097197],
 	[281,   'log', [Math.PI], "Math.PI", 1.1447298858494002],
 
-	[300, 'log1p', [n], n, 0.11600367575630613],
-	[301, 'log1p', [Math.PI], "Math.PI", 1.4210804127942926],
+	[300, 'log1p', [n], n, 0.11600367575630613, 0.11600367575630613],
+	[301, 'log1p', [Math.PI], "Math.PI", 1.4210804127942926, 1.4210804127942926],
 
-	[320, 'log10', [n], n, -0.9100948885606021],
-	[321, 'log10', [Math.PI], "Math.PI", 0.49714987269413385],
-	[322, 'log10', [Math.E], "Math.E", 0.4342944819032518],
-	[323, 'log10', [Math.LN2], "Math.LN2", -0.1591745389548616],
-	[324, 'log10', [Math.LOG2E], "Math.LOG2E", 0.15917453895486158],
-	[325, 'log10', [Math.LOG10E], "Math.LOG10E", -0.36221568869946325],
-	[326, 'log10', [Math.SQRT1_2], "Math.SQRT1_2", -0.15051499783199057],
-	[327, 'log10', [Math.SQRT2], "Math.SQRT2", 0.15051499783199063],
+	[320, 'log10', [n], n, -0.9100948885606021, -0.9100948885606022],
+	[321, 'log10', [Math.PI], "Math.PI", 0.49714987269413385, 0.49714987269413385],
+	[322, 'log10', [Math.E], "Math.E", 0.4342944819032518, 0.4342944819032518],
+	[323, 'log10', [34*Math.E], '34*Math.E', 1.965773398945507, 1.965773398945507],
+	[324, 'log10', [Math.LN2], "Math.LN2", -0.1591745389548616, -0.1591745389548616],
+	[325, 'log10', [11*Math.LN2], '11*Math.LN2', 0.8822181462033635, 0.8822181462033635],
+	[326, 'log10', [Math.LOG2E], "Math.LOG2E", 0.15917453895486158, 0.15917453895486158],
+	[327, 'log10', [43*Math.LOG2E], '43*Math.LOG2E', 1.7926429945344482, 1.792642994534448],
+	[328, 'log10', [Math.LOG10E], "Math.LOG10E", -0.36221568869946325, -0.3622156886994632],
+	[329, 'log10', [7*Math.LOG10E], '7*Math.LOG10E', 0.48288235131479357, 0.4828823513147936],
+	[330, 'log10', [Math.SQRT1_2], "Math.SQRT1_2", -0.15051499783199057, -0.15051499783199057],
+	[331, 'log10', [2*Math.SQRT1_2], '2*Math.SQRT1_2', 0.15051499783199063, 0.1505149978319906],
+	[332, 'log10', [Math.SQRT2], "Math.SQRT2", 0.15051499783199063, 0.1505149978319906],
 
 	[340,   'sin', [bigN], "bigN", 0.994076732536068], // creep says unique in Tor
 	[341,   'sin', [Math.PI], "Math.PI", 1.2246467991473532e-16], // creep says unique in Tor
-	[342,   'sin', [Math.E], "Math.E", 0.41078129050290885],
-	[343,   'sin', [Math.LN2], "Math.LN2", 0.6389612763136348],
-	[344,   'sin', [Math.LOG2E], "Math.LOG2E", 0.9918062443936637],
-	[345,   'sin', [Math.LOG10E], "Math.LOG10E", 0.4207704833137573],
-	[346,   'sin', [Math.SQRT1_2], "Math.SQRT1_2", 0.6496369390800625],
-	[347,   'sin', [Math.SQRT2], "Math.SQRT2", 0.9877659459927356],
+	[342,   'sin', [39*Math.E], "39*Math.E", -0.7181630308570678],
+	[343,   'sin', [35*Math.LN2], "35*Math.LN2", -0.765996413898051],
+	[344,   'sin', [110*Math.LOG2E], "110*Math.LOG2E", 0.9989410140273757],
+	[345,   'sin', [7*Math.LOG10E], "7*Math.LOG10E", 0.10135692924965614],
+	[346,   'sin', [35*Math.SQRT1_2], "35*Math.SQRT1_2", -0.37463575478582023],
+	[347,   'sin', [21*Math.SQRT2], "21*Math.SQRT2", -0.9892668187780497],
 
-	[360,  'sinh', [1], "1", 1.1752011936438014],
-	[361,  'sinh', [Math.PI], "Math.PI", 11.548739357257748],
-	[362,  'sinh', [Math.E], "Math.E", 7.544137102816975],
-	[363,  'sinh', [Math.LN2], "Math.LN2", 0.75],
-	[364,  'sinh', [Math.LOG2E], "Math.LOG2E", 1.9978980091062795],
-	[365,  'sinh', [Math.LOG10E], "Math.LOG10E", 0.44807597941469024],
-	[366,  'sinh', [Math.SQRT1_2], "Math.SQRT1_2", 0.7675231451261164],
-	[367,  'sinh', [Math.SQRT2], "Math.SQRT2", 1.935066822174357],
+	[360,  'sinh', [1], "1", 1.1752011936438014, 1.1752011936438014],
+	[361,  'sinh', [Math.PI], "Math.PI", 11.548739357257748, 11.548739357257748],
+	[362,  'sinh', [Math.E], "Math.E", 7.544137102816975, 7.544137102816975],
+	[363,  'sinh', [Math.LN2], "Math.LN2", 0.75, 0.75],
+	[364,  'sinh', [Math.LOG2E], "Math.LOG2E", 1.9978980091062795, 1.9978980091062797],
+	[365,  'sinh', [492*Math.LOG2E], '492*Math.LOG2E', 9.199870313877774e+307, "Infinity"],
+	[366,  'sinh', [Math.LOG10E], "Math.LOG10E", 0.44807597941469024, 0.4480759794146903],
+	[367,  'sinh', [Math.SQRT1_2], "Math.SQRT1_2", 0.7675231451261164, 0.7675231451261164],
+	[368,  'sinh', [Math.SQRT2], "Math.SQRT2", 1.935066822174357, 1.9350668221743568],
+	[369,  'sinh', [502*Math.SQRT2], '502*Math.SQRT2', 1.046919966902314e+308, "Infinity"],
 
 	[380,  'sqrt', [n], n, 0.3507135583350036],
 	[381,  'sqrt', [Math.PI], "Math.PI", 1.7724538509055159],
@@ -189,8 +198,8 @@ var fns = [
 	[406,   'tan', [34*Math.SQRT1_2], '34*Math.SQRT1_2', -1.922295546179998],
 	[407,   'tan', [10*Math.LOG10E], '10*Math.LOG10E', 2.5824856130712437],
 
-	[420,  'tanh', [n], n, 0.12238344189440875],
-	[421,  'tanh', [Math.PI], "Math.PI", 0.99627207622075],
+	[420,  'tanh', [n], n, 0.12238344189440875, 0.12238344189440872],
+	[421,  'tanh', [Math.PI], "Math.PI", 0.99627207622075, 0.9962720762207501],
 
 	[440,   'pow', [n,-100], n+",-100", 1.0220893335845176e+91],
 	[441,   'pow', [Math.PI,-100], "Math.PI,-100", 1.9275814160560185e-50],
@@ -291,14 +300,28 @@ function outputMath() {
 		if (fn[5] !== undefined && fn[5] !== "") {
 			poly1Control = fn[5].toString()
 			if (fnName == "acosh") {
-				poly1Result = (acosh(...fn[2])).toString()
+				poly1Result = acosh(...fn[2])
 			} else if (fnName == "asinh") {
-				poly1Result = (asinh(...fn[2])).toString()
+				poly1Result = asinh(...fn[2])
 			} else if (fnName == "atanh") {
-				poly1Result = (atanh(...fn[2])).toString()
+				poly1Result = atanh(...fn[2])
 			} else if (fnName == "cosh") {
-				poly1Result = (cosh(...fn[2])).toString()
+				poly1Result = cosh(...fn[2])
+			} else if (fnName == "hypot") {
+				// i need to pass an array
+				poly1Result = hypot([...fn[2]])
+			} else if (fnName == "log1p") {
+				poly1Result = log1p(...fn[2])
+			} else if (fnName == "log2") {
+				poly1Result = log2(...fn[2])
+			} else if (fnName == "log10") {
+				poly1Result = log10(...fn[2])
+			} else if (fnName == "sinh") {
+				poly1Result = sinh(...fn[2])
+			} else if (fnName == "tanh") {
+				poly1Result = tanh(...fn[2])
 			}
+			poly1Result = poly1Result.toString()
 			//console.debug(k, fn[3], fnName, poly1Control, poly1Result)
 		}
 
