--- a/math.html
+++ b/math.html
@@ -135,7 +135,6 @@ function build_arrays(engine) {
 	} else if (engine == "mac") {
 		c = newMAC
 	}
-	}
 	newfns = [
 		// [item, function, value, description, control, poly1 control, poly2 control]
 		[ 20,  'acos', [n], n, c[0]],
@@ -549,7 +548,7 @@ function outputMath(control) {
 	if (control == "firefox") {
 		controlname = "Firefox 78 64-bit on Windows 64-bit"
 	} else if (control == "chrome") {
-		controlname = "Chrome 84 6-4bit on Windows 64-bit"
+		controlname = "Chrome 85 64-bit on Windows 64-bit"
 	} else if (control == "mac") {
 		controlname = "Safari something on Mac something"
 	}
