--- a/math.html
+++ b/math.html
@@ -442,7 +442,7 @@ function get_results(type) {
 		prevFn = fn[1]
 	}
 	// generate control lists
-	console.log("CONTROL LIST: " + type + "\n" + generate.join(","))
+	//console.log("CONTROL LIST: " + type + "\n" + generate.join(","))
 
 	// numbers
 	numbers.sort((a,b) => a-b)
